--- a/otf-ri-ear/pom.xml
+++ b/otf-ri-ear/pom.xml
@@ -15,18 +15,23 @@
     <dependencies>
         <dependency>
             <groupId>com.cocati.otf</groupId>
+            <artifactId>otf-core</artifactId>
+            <version>${version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.cocati.otf</groupId>
             <artifactId>otf-dataprovider</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${version}</version>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>com.cocati.otf</groupId>
             <artifactId>otf-dataanalyzer</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${version}</version>
             <type>ejb</type>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
@@ -36,6 +41,10 @@
                 <version>2.10.1</version>
                 <configuration>
                     <modules>
+                        <jarModule>
+                            <groupId>com.cocati.otf</groupId>
+                            <artifactId>otf-core</artifactId>
+                        </jarModule>
                         <ejbModule>
                             <groupId>com.cocati.otf</groupId>
                             <artifactId>otf-dataprovider</artifactId>
@@ -45,6 +54,9 @@
                             <artifactId>otf-dataanalyzer</artifactId>
                         </ejbModule>
                     </modules>
+                    <defaultLibBundleDir>lib</defaultLibBundleDir>
+                    <generateApplicationXml>true</generateApplicationXml>
+                    <outputDirectory>${ear.outputDirectory}</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
