--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,17 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>otf-dataprovider</module>
-        <module>otf-decision</module>
-        <module>otf-dataanalyzer</module>
         <module>otf-core</module>
+        <module>otf-dataprovider</module>
+        <module>otf-dataanalyzer</module>
+        <module>otf-decision</module>
         <module>otf-ri-ear</module>
     </modules>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <ear.outputDirectory>/home/marcin/payara41/glassfish/domains/domain1/autodeploy</ear.outputDirectory>
     </properties>
 
     <dependencyManagement>
@@ -27,8 +28,30 @@
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
                 <version>7.0</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.cocati.otf</groupId>
+                <artifactId>otf-core</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <scope>provided</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-ejb-plugin</artifactId>
+                    <version>2.5.1</version>
+                    <configuration>
+                        <ejbVersion>3.1</ejbVersion>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
